# cpp-benchmarking

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  COPYING.md  FILESTRUCTURE.md  README.md  TODO.md  _config.yml  codecov.yml
.github/workflows/: ci.yml
_layouts/: default.html
app/: CMakeLists.txt  cpp-benchmarking_app.cpp  cppbench_app.cpp
assets/css/: style.scss
bench/: CMakeLists.txt  add_one_b.cpp  bench.cpp  bench.hpp  map_b1.cpp  map_b2.cpp  map_b3.cpp  map_b4.cpp  map_b5.cpp  map_b6.cpp  map_b7.cpp  small_map_b.cpp  small_map_b0.cpp  small_map_b1.cpp
include/cpp-benchmarking/: cpp-benchmarking.hpp
include/cppbench/: add_one.hpp  small_map.hpp  sorted_vec_map.hpp  vec_map.hpp
perf/: bench5_branch_miss.txt  bench5_cache_miss.txt  bench6_branch_miss.txt  bench6_cache_miss.txt  branch_miss.plot  branch_miss.sh  cache_miss.plot  cache_miss.sh
plots/: bench5.json  bench6.json  bench7.json  plot.py
slides/: slides.odp
src/: CMakeLists.txt  add_one.cpp  cpp-benchmarking.cpp  small_map.cpp  vec_map.cpp
tests/: CMakeLists.txt  add_one_t.cpp  cpp-benchmarking_t.cpp  small_map_t.cpp  vec_map_t.cpp
